--- a/refs.bib
+++ b/refs.bib
@@ -22,9 +22,8 @@
 	Date-Added = {2016-10-19 18:56:39 +0000},
 	Date-Modified = {2016-10-19 18:56:39 +0000},
 	Journal = {Journal of Computational and Applied Mathematics},
-	Note = {Numerical Analysis 2000. Vol. VI: Ordinary Differential Equations and Integral Equations},
 	Number = {1--2},
-	Pages = {1 - 29},
+	Pages = {1--29},
 	Title = {Numerical methods for ordinary differential equations in the 20th century},
 	Volume = {125},
 	Year = {2000},
@@ -93,8 +92,7 @@
 	Year = {2016},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s10107-015-0949-3}}
 
-@article{DroriTeboulle13,
-	Author = {Y. Drori and M. Teboulle},
+@article{DroriTeboulle13,	Author = {Y. Drori and M. Teboulle},
 	Date-Added = {2016-10-18 16:58:55 +0000},
 	Date-Modified = {2016-10-18 16:58:55 +0000},
 	Journal = {Mathematical Programming},
@@ -125,7 +123,7 @@
 	Author = {Chebyshev, P. L},
 	Date-Added = {2016-10-12 17:46:22 +0000},
 	Date-Modified = {2016-10-12 17:48:44 +0000},
-	Journal = {M{\'{e}}moires pr{\'{e}}sent{\'{e}}s {\'{a}} l'Acad{\'{e}}mie Imp{\'{e}}riale des Sciences de St-P{\'{e}}tersbourg},
+	Journal = {M{\'{e}}moires Pr{\'{e}}sent{\'{e}}s {\'{a}} l'Acad{\'{e}}mie Imp{\'{e}}riale des Sciences de St-P{\'{e}}tersbourg},
 	Number = {539-568},
 	Title = {Th{\'{e}}orie des m{\'{e}}canismes connus sous le nom de parall{\'{e}}logrammes},
 	Volume = {VII},
@@ -236,10 +234,10 @@
 	Date-Modified = {2016-07-15 00:59:39 +0000},
 	Doi = {10.1137/0803026},
 	Eprint = {http://dx.doi.org/10.1137/0803026},
-	Journal = {SIAM Journal on Optimization},
+	Journal = {SIAM Journal of Optimization},
 	Number = {3},
 	Pages = {538-543},
-	Title = {Convergence Analysis of a Proximal-Like Minimization Algorithm Using Bregman Functions},
+	Title = {Convergence Analysis of a Proximal-Like Minimization Algorithm Using {B}regman Functions},
 	Url = {http://dx.doi.org/10.1137/0803026},
 	Volume = {3},
 	Year = {1993},
