--- a/refs.bib
+++ b/refs.bib
@@ -134,7 +134,7 @@
 	Date-Added = {2016-10-12 17:28:01 +0000},
 	Date-Modified = {2016-10-12 17:29:18 +0000},
 	Journal = {ArXiv preprint arXiv:1604.06543},
-	Title = {An optimal first order method based on optimal quadratic averaging An optimal first order method based on optimal quadratic averaging},
+	Title = {An optimal first order method based on optimal quadratic averaging},
 	Year = {2016}}
 
 @article{Rumelhardt,
@@ -257,7 +257,7 @@
 	Author = {Nesterov, Yurii},
 	Date-Added = {2016-05-23 20:01:00 +0000},
 	Date-Modified = {2016-05-23 20:01:36 +0000},
-	Institution = {Universit{\'e} catholique de Louvain, Center for Operations Research and Econometrics (CORE)},
+	Institution = {Universit{\'e} Catholique de Louvain, Center for Operations Research and Econometrics (CORE)},
 	Title = {Complexity bounds for primal-dual methods minimizing the model of objective function},
 	Year = {2015}}
 
@@ -291,7 +291,7 @@
 	Date-Added = {2016-05-08 00:44:48 +0000},
 	Date-Modified = {2016-05-08 00:48:00 +0000},
 	Howpublished = {Arxiv preprint arXiv},
-	Title = {New Analysis and Results for the Franke-Wolfe Method},
+	Title = {New Analysis and Results for the {F}rank-{W}olfe Method},
 	Year = {2014}}
 
 @article{SME,
