--- a/refs.bib
+++ b/refs.bib
@@ -265,7 +265,7 @@
 	Author = {Yurii Nesterov and Vladimir Shikhman},
 	Date-Added = {2016-05-23 19:06:21 +0000},
 	Date-Modified = {2016-05-23 19:06:21 +0000},
-	Journal = {J. Optimization Theory and Applications},
+	Journal = {Journal of Optimization Theory and Applications},
 	Number = {3},
 	Pages = {917--940},
 	Title = {Quasi-monotone Subgradient Methods for Nonsmooth Convex Minimization},
