--- a/refs.bib
+++ b/refs.bib
@@ -1429,7 +1429,7 @@
 	Journal = {ArXiv e-prints ar{X}iv:1503.01243},
 	Keywords = {Statistics - Machine Learning, Mathematics - Classical Analysis and ODEs, Mathematics - Optimization and Control},
 	Primaryclass = {stat.ML},
-	Title = {{A Differential Equation for Modeling Nesterov's Accelerated Gradient Method: Theory and Insights}},
+	Title = {A differential equation for modeling {N}esterov's accelerated gradient method: Theory and insights},
 	Year = 2015}
 
 @article{Nesterov05,
