--- a/Draft14.tex
+++ b/Draft14.tex
@@ -166,7 +166,7 @@ The existence of such a \emph{Lyapunov function} guarantees that the dynamical s
 
 In this paper, we are interested in obtaining Lyapunov functions for dynamical systems designed for optimization.  In optimization, we are typically interested in the~\emph{rate of convergence} of a method, not mere convergence.  To facilitate such rate analysis, we study time-dependent Lyapunov functions.  Though it is unconventional to have Lyapunov functions depend explicitly on time, our Lyapunov function is parameterized explicitly by $\alpha_t$, $\beta_t$, and $\gamma_t$, reflecting the dependence of the dynamics~\eqref{Eq:ELBreg} on these functions.
 
-The family of dynamics that obey the ideal scaling constraints~\eqref{Eq:IdeSca} is invariant under time reparametrizations.  Such time-invariance properties provide more flexibility in algorithm design and analysis, as we will see throughout this paper.
+The family of dynamics that obey the ideal scaling constraints~\eqref{Eq:IdeSca} is invariant under time reparameterizations.  Such time-invariance properties provide more flexibility in algorithm design and analysis, as we will see throughout this paper.
 
 We begin by presenting time-varying Lyapunov functions that can verify the convergence rates of continuous-time momentum flows, and we then turn to the corresponding discrete-time analysis.
 
