--- a/Draft14.tex
+++ b/Draft14.tex
@@ -105,7 +105,7 @@ The paper proceeds as follows.  We first describe the related work in viewing op
 
 \section{The Dynamical View of Momentum Methods}
 
-\paragraph{Problem Setting}
+\paragraph{Problem setting}
 This paper is concerned with the class of constrained optimization problems
 \begin{align}\label{eq:main-problem}
 \min_{x \in \X} \; f(x),
@@ -170,7 +170,7 @@ The family of dynamics that obey the ideal scaling constraints~\eqref{Eq:IdeSca}
 
 We begin by presenting time-varying Lyapunov functions that can verify the convergence rates of continuous-time momentum flows, and we then turn to the corresponding discrete-time analysis.
 
-\paragraph{General Accelerated Mirror Descent} In Wibisono {\em et al.}~\cite{Acceleration}, the following Lyapunov function:
+\paragraph{General accelerated mirror descent} In Wibisono {\em et al.}~\cite{Acceleration}, the following Lyapunov function:
 \begin{align}\label{Eq:E}
 \E_t \,=\, e^{\beta_t} (f(X_t)-f(x^*)) + D_h\left(x^*, \, X_t + e^{-\alpha_t} \dot X_t\right),
 \end{align}
